tests/invalid_types/no_return.hk
fun bad() I32{}

fun main() I32{
    return bad;
}

#[
<fail>
]#